--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="">Home</a></li>
-				<li><a href="">Histórico</a></li>
-				<li><a href="">Programação</a></li>
-				<li><a href="">Minicursos</a></li>
-				<li><a href="">Inscrições</a></li>
-				<li><a href="">Patrocinadores</a></li>
-				<li><a href="">Contato</a></li>
+				<li><a href="./index.html">Home</a></li>
+				<li><a href="./historico.html">Histórico</a></li>
+				<li><a href="./programacao.html">Programação</a></li>
+				<li><a href="./minicursos.html">Minicursos</a></li>
+				<li><a href="./inscricoes.html">Inscrições</a></li>
+				<li><a href="./patrocinadores.html">Patrocinadores</a></li>
+				<li><a href="./contato.html">Contato</a></li>
 			</ul>
 		</nav>
 		<main>
