feat: Responsividade do cronograma

--- a/programacao.html
+++ b/programacao.html
@@ -126,10 +126,10 @@
                         <tr>
                             <td class="stick-column">18:00</td>
                             <td>Confraternização</td>
-                            <td>Sessão de Pôsteres 
+                            <td>Sessão de Pôsteres <br>
                                 & Pitches de Pesquisa</td>
                             <td>Confraternização</td>
-                            <td>Sessão de Pôsteres 
+                            <td>Sessão de Pôsteres <br>
                                 & Pitches de Pesquisa</td>
                             <td></td>
                         </tr>
