chore: correção da página inicial

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					contato.
 				</p>
 				<p>
-					Em 2026, a EVQ contará com uma programação diversificada, incluindo
+					Em <strong>2026</strong>, entre os dias <strong>23 e 27 de Fevereiro</strong>, a EVQ contará com uma programação diversificada, incluindo
 					palestras, minicursos, workshops e atividades culturais. Nosso
 					objetivo é proporcionar um ambiente estimulante para o aprendizado e a
 					inovação na área de química.
