chore: atualização de cores da programação

--- a/programacao.html
+++ b/programacao.html
@@ -85,7 +85,7 @@
                         </tr>
                         <tr>
                             <td class="stick-column">12:00</td>
-                            <td colspan="5">Intervalo para almoço</td>
+                            <td colspan="5"><i>Intervalo para almoço</i></td>
                             <!-- mesclada -->
                             <!-- mesclada -->
                             <!-- mesclada -->
