chore: página de patrocinadores

--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -23,6 +23,7 @@
 
 		<link rel="stylesheet" href="./src/css/reset.css" />
 		<link rel="stylesheet" href="./src/css/style.css" />
+		<link rel="stylesheet" href="./src/css/sponsorship.css" />
 	</head>
 	<body>
 		<header>
@@ -48,7 +49,40 @@
 		<main>
 			<div class="content">
 				<h2>Patrocinadores</h2>
-				<p><i>Em breve!</i></p>
+				<div class="sponsor-grid">
+					<a href="https://www.dq.ufscar.br/pt-br/pagina-inicial" target="_blank" class="sponsor-card">
+						<div class="sponsor-logo">
+							<img src="./src/img/DQ-logo.png" alt="Departamento de Química UFSCar">
+						</div>
+						<h3>Departamento de Química UFSCar</h3>
+					</a>
+					<a href="https://www.ppgq.ufscar.br/pt-br/front-page" target="_blank" class="sponsor-card">
+						<div class="sponsor-logo">
+							<img src="./src/img/ppgq-logo.png" alt="Pós-Graduação em Química UFSCar">
+						</div>
+						<h3>Pós-Graduação em Química UFSCar</h3>
+					</a>
+				</div>
+				<div class="sponsor-grid">
+					<a href="https://www.central.dq.ufscar.br/" target="_blank" class="sponsor-card">
+						<div class="sponsor-logo">
+							<img src="./src/img/central-logo.png" alt="Central Analítica UFSCar">
+						</div>
+						<h3>Central Analítica</h3>
+					</a>
+					<a href="" target="_blank" class="sponsor-card">
+						<div class="sponsor-logo">
+							<img src="./src/img/sq-logo.png" alt="SC Química">
+						</div>
+						<h3>SC Química</h3>
+					</a>
+					<a href="https://scqonline.com/" target="_blank" class="sponsor-card">
+						<div class="sponsor-logo">
+							<img src="./src/img/importnow-logo.gif" alt="ImportNow">
+						</div>
+						<h3>ImportNow</h3>
+					</a>
+				</div>
 			</div>
 		</main>
 		<footer>
