chore: página de história

--- a/historico.html
+++ b/historico.html
@@ -1,60 +1,289 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>EVQ 2026</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EVQ 2026</title>
 
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="./src/img/apple-touch-icon.png" />
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="./src/img/favicon-32x32.png" />
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="./src/img/favicon-16x16.png" />
-		<link rel="manifest" href="./site.webmanifest" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./src/img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./src/img/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
 
-		<link rel="stylesheet" href="./src/css/reset.css" />
-		<link rel="stylesheet" href="./src/css/style.css" />
-	</head>
-	<body>
-		<header>
-			<div class="logo-evq">
-				<img src="./src/img/EVQ-logo.png" alt="EVQ 2026" class="logo-img" />
-			</div>
-			<div class="logo-instituicao">
-				<img src="./src/img/DQ-logo.png" alt="DQ" class="logo-img" />
-				<img src="./src/img/Ufscar-logo.png" alt="UFSCar" class="logo-img" />
-			</div>
-		</header>
-		<nav>
-			<ul>
-				<li><a href="./index.html">Home</a></li>
-				<li><a href="./historico.html">Histórico</a></li>
-				<li><a href="./programacao.html">Programação</a></li>
-				<li><a href="./minicursos.html">Minicursos</a></li>
-				<li><a href="./inscricoes.html">Inscrições</a></li>
-				<li><a href="./patrocinadores.html">Patrocinadores</a></li>
-				<li><a href="./contato.html">Contato</a></li>
-			</ul>
-		</nav>
-		<main>
-			<div class="content">
-				<h2>Histórico</h2>
-				<p><i>Em breve!</i></p>
-			</div>
-		</main>
-		<footer>
-			<p>Escola de Verão em Química | Departamento de Química - UFSCar</p>
-			<p>Rodovia Washington Luis, km 235 - São Carlos - SP - BR</p>
-			<p><a href="mailto:evq@ufscar.br">evq@ufscar.br</a></p>
-		</footer>
-	</body>
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/history.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo-evq">
+        <img src="./src/img/EVQ-logo.png" alt="EVQ 2026" class="logo-img" />
+      </div>
+      <div class="logo-instituicao">
+        <img src="./src/img/DQ-logo.png" alt="DQ" class="logo-img" />
+        <img src="./src/img/Ufscar-logo.png" alt="UFSCar" class="logo-img" />
+      </div>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./historia.html">História</a></li>
+        <li><a href="./programacao.html">Programação</a></li>
+        <li><a href="./minicursos.html">Minicursos</a></li>
+        <li><a href="./inscricoes.html">Inscrições</a></li>
+        <li><a href="./patrocinadores.html">Patrocinadores</a></li>
+        <li><a href="./contato.html">Contato</a></li>
+      </ul>
+    </nav>
+    <main>
+      <div class="content">
+        <h2>Memórias da Escola de Verão em Química</h2>
+
+        <div class="fotos">
+          <img
+            src="./src/img/fotos/foto4.jpeg"
+            alt="Foto de professores em 1988"
+          />
+          <br />
+          <label class="legenda">Prof. Dr. Jose Tércio B. Ferreira.</label>
+        </div>
+        <p>
+          A Escola de Verão em Química Orgânica do Departamento de Química (DQ)
+          da Universidade Federal de São Carlos (UFSCar) teve início em 1981 por
+          iniciativa dos professores da área. As Escolas iniciais eram voltadas
+          aos Químicos Orgânicos e contava apenas com a participação de
+          pesquisadores brasileiros.
+        </p>
+        <div class="fotos">
+          <img
+            src="./src/img/fotos/foto1.jpeg"
+            alt="Foto de professores em 1988"
+          />
+          <br />
+          <label class="legenda"
+            >Profs. Timothy Brocksom, Andrew Greene, Thomas Money, Jose Tércio
+            B. Ferreira e Ronaldo Pilli (no quadro negro), 1988.</label
+          >
+        </div>
+        <p>
+          Já a partir da 3ª. Escola, em 1983, o evento começou a contar com a
+          participação de pesquisadores estrangeiros, sendo o primeiro deles o
+          Dr. Andrew E. Greene da Université de Grenoble, França. Esse aspecto
+          internacional demonstrou ser extremamente proveitoso para alavancar e
+          motivar o desenvolvimento de uma série de atividades de pesquisa no
+          Programa de Pós-Graduação em Química (PPGQ) do DQ-UFSCar e de outros
+          grupos no Brasil.
+        </p>
+        <p>
+          A formação de vários professores/pesquisadores atuando hoje no Brasil
+          foi fortemente influenciada, e muitas vezes diretamente promovida,
+          pela oportunidade de contato com pesquisadores estrangeiros durante as
+          EVQs. Em muitos casos, foi possível estabelecer colaborações
+          científicas que resultaram no estágio de doutorado sanduiche e
+          pós-doutorados no exterior.
+        </p>
+
+        <div class="abroad-table">
+          <table>
+            <label
+              >Alguns estágios de doutorado sanduíche de alunos do
+              PPGQ-UFSCar.</label
+            >
+            <thead>
+              <tr>
+                <th>Estagiário</th>
+                <th>Orientador</th>
+                <th>Supervisor</th>
+                <th>Local</th>
+                <th>Ano</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Arlene G. Corrêa</td>
+                <td>Timothy J. Brocksom</td>
+                <td>Andrew E. Greene</td>
+                <td>Univ. Grenoble, França</td>
+                <td>1988</td>
+              </tr>
+              <tr>
+                <td>Fabio Simonelli</td>
+                <td>J. Tercio B. Ferreira</td>
+                <td>Joseph P. Marino</td>
+                <td>Univ. of Michigan, EUA</td>
+                <td>1990</td>
+              </tr>
+              <tr>
+                <td>Alfredo M. Oliveira</td>
+                <td>J. Tercio B. Ferreira</td>
+                <td>Joseph P. Marino</td>
+                <td>Univ. of Michigan, EUA</td>
+                <td>1990</td>
+              </tr>
+              <tr>
+                <td>Francisco A. Marques</td>
+                <td>J. Tercio B. Ferreira</td>
+                <td>Edward Piers</td>
+                <td>Univ. British Columbia, Canadá</td>
+                <td>1992</td>
+              </tr>
+              <tr>
+                <td>Jacqueline A. Marques</td>
+                <td>J. Tercio B. Ferreira</td>
+                <td>Joseph P. Marino</td>
+                <td>Univ. of Michigan, EUA</td>
+                <td>1995</td>
+              </tr>
+              <tr>
+                <td>Paulo H. G. Zarbin</td>
+                <td>J. Tercio B. Ferreira</td>
+                <td>Walter Leal</td>
+                <td>NISES, Tsukuba, Japão</td>
+                <td>1996</td>
+              </tr>
+              <tr>
+                <td>Aurelia Reckziegel</td>
+                <td>José T. B. Ferreira</td>
+                <td>Wittko Francke</td>
+                <td>Univ. Hamburg, Alemanha</td>
+                <td>1996</td>
+              </tr>
+              <tr>
+                <td>Ellen Santangelo</td>
+                <td>Arlene G. Corrêa</td>
+                <td>Rikard Unelius</td>
+                <td>KTH, Estocolmo, Suécia</td>
+                <td>2000</td>
+              </tr>
+              <tr>
+                <td>Jardel A. Moreira</td>
+                <td>Arlene G. Corrêa</td>
+                <td>Jocelyn Millar</td>
+                <td>Univ. California, EUA</td>
+                <td>2001</td>
+              </tr>
+              <tr>
+                <td>Lucas C. C. Vieira</td>
+                <td>Arlene G. Corrêa</td>
+                <td>Darren J. Dixon</td>
+                <td>Univ. Oxford, UK</td>
+                <td>2013</td>
+              </tr>
+              <tr>
+                <td>Clarisse A. D. Caiuby</td>
+                <td>Marcio W. Paixão</td>
+                <td>C.J. Li</td>
+                <td>McGill Univ., Canadá</td>
+                <td>2016</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <p>
+          Em 1996, a escola se tornou ainda mais multidisciplinar, com a I
+          Escola de Verão em Química Inorgânica com participação efetiva dos
+          pesquisadores desta área. Essa inclusão ajudou a quebrar barreiras de
+          divisão entre as subáreas da química. Com a perda precoce do Prof.
+          Tércio, em 1998 as EVQs passaram a ser denominadas
+          <strong>Escola de Verão em Química</strong> “Prof. Dr. José Tercio B
+          Ferreira”, numa justa homenagem a um dos seus criadores e sem dúvida
+          uma das pessoas que mais contribuíram para o seu sucesso.
+        </p>
+
+        <div class="fotos">
+          <img
+            src="./src/img/fotos/foto2.jpeg"
+            alt="Foto de professores em 2006"
+          />
+          <br />
+          <label class="legenda"
+            >Profs. Rajender S. Varma, R. Verpoorte e Robin Rogers, 2006.</label
+          >
+        </div>
+
+        <p>
+          Em 1993, por iniciativa do Prof. Tercio, a EVQ inovou lançando a
+          “Série de Textos da Escola de Verão”, que trazia o conteúdo de um dos
+          cursos oferecidos durante a Escola na forma de livro. O primeiro livro
+          “Some features of [4+2]- and [2+2]-Cycloadditions” do Prof. Claude
+          Spino, que na época era docente da Universidade de Victoria – Canadá,
+          foi lançado em 1993. O segundo livro “The use of free radical
+          reactions in Organic Synthesis” do Prof. Philip Parsons foi publicado
+          no ano seguinte. No entanto, estes livros não foram indexados.
+        </p>
+
+        <br />
+        <p>
+          Desta forma, em 2001 em parceria com a EdUFSCar, fizemos o lançamento
+          de 3 volumes da Série de Textos da EVQ:
+        </p>
+        <ul class="publi-list">
+          <li>
+            Vol. 1: “Some features of [4+2]- and [2+2]-Cycloadditions”, Claude
+            Spino, edição revisada, ISBN: 85-85173-52-1.
+          </li>
+          <li>
+            Vol. 2: “Síntese Estereosseletiva de Alcalóides e N-Heterociclos”,
+            Carlos R. D. Correia, ISBN: 85-85173-53-x.
+          </li>
+          <li>
+            Vol. 3: “Produtos Naturais no Controle de Insetos”, organizadores:
+            Jose Tercio B. Ferreira, Arlene G. Corrêa e Paulo C. Vieira, ISBN:
+            85-85173-51-3. Foi lançada a 2ª. edição revisada deste livro em
+            2007, organizadores: Arlene G. Corrêa e Paulo C. Vieira, ISBN:
+            978-85-7600-095-2
+          </li>
+        </ul>
+
+        <br />
+        <p>Posteriormente foram lançados outros 3 volumes:</p>
+        <ul class="publi-list">
+          <li>
+            Vol. 4: “Princípios Ativos de Plantas Superiores”, Kurt Hostettmann,
+            Emerson F. Queiroz e Paulo C. Vieira, 2003, ISBN:85-85173-99-8 Foi
+            lançada a 2ª. edição revisada deste livro em 2014, autores: Emerson
+            F. Queiroz, Jean-Luc Wolfender, Kurt Hostettmann e Paulo C. Vieira
+            ISBN: 978-85-7600-343-4.
+          </li>
+          <li>
+            Vol. 5: “Química Verde: Fundamentos e Aplicações”, organizadoras:
+            Arlene G. Corrêa e Vania G. Zuin, 2009, ISBN: 978-85-7600-150-8. Em
+            2010 o livro recebeu o Prêmio Jabuti de Bronze da Academia
+            Brasileira do Livro na categoria Ciências Exatas, Tecnologia e
+            Informática.
+          </li>
+          <li>
+            Vol. 6: “Biomassa: Estrutura, Propriedades e Aplicações”,
+            organizadores: Arlene G. Corrêa, Jean M. Gallo, 2020.
+          </li>
+        </ul>
+        <br />
+        <p>
+          Estes livros têm sido bastante citados principalmente por alunos de
+          graduação e pós-graduação, atingindo, portanto, os objetivos que
+          idealizamos.
+        </p>
+      </div>
+    </main>
+    <footer>
+      <p>Escola de Verão em Química | Departamento de Química - UFSCar</p>
+      <p>Rodovia Washington Luis, km 235 - São Carlos - SP - BR</p>
+      <p><a href="mailto:evq@ufscar.br">evq@ufscar.br</a></p>
+    </footer>
+  </body>
 </html>
