--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -1,94 +1,118 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>EVQ 2026</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EVQ 2026</title>
 
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="./src/img/apple-touch-icon.png" />
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="./src/img/favicon-32x32.png" />
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="./src/img/favicon-16x16.png" />
-		<link rel="manifest" href="./site.webmanifest" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./src/img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./src/img/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
 
-		<link rel="stylesheet" href="./src/css/reset.css" />
-		<link rel="stylesheet" href="./src/css/style.css" />
-		<link rel="stylesheet" href="./src/css/sponsorship.css" />
-	</head>
-	<body>
-		<header>
-			<div class="logo-evq">
-				<img src="./src/img/EVQ-logo.png" alt="EVQ 2026" class="logo-img" />
-			</div>
-			<div class="logo-instituicao">
-				<img src="./src/img/DQ-logo.png" alt="DQ" class="logo-img" />
-				<img src="./src/img/Ufscar-logo.png" alt="UFSCar" class="logo-img" />
-			</div>
-		</header>
-		<nav>
-			<ul>
-				<li><a href="./index.html">Home</a></li>
-				<li><a href="./historico.html">Histórico</a></li>
-				<li><a href="./programacao.html">Programação</a></li>
-				<li><a href="./minicursos.html">Minicursos</a></li>
-				<li><a href="./inscricoes.html">Inscrições</a></li>
-				<li><a href="./patrocinadores.html">Patrocinadores</a></li>
-				<li><a href="./contato.html">Contato</a></li>
-			</ul>
-		</nav>
-		<main>
-			<div class="content">
-				<h2>Patrocinadores</h2>
-				<div class="sponsor-grid">
-					<a href="https://www.dq.ufscar.br/pt-br/pagina-inicial" target="_blank" class="sponsor-card">
-						<div class="sponsor-logo">
-							<img src="./src/img/DQ-logo.png" alt="Departamento de Química UFSCar">
-						</div>
-						<h3>Departamento de Química UFSCar</h3>
-					</a>
-					<a href="https://www.ppgq.ufscar.br/pt-br/front-page" target="_blank" class="sponsor-card">
-						<div class="sponsor-logo">
-							<img src="./src/img/ppgq-logo.png" alt="Pós-Graduação em Química UFSCar">
-						</div>
-						<h3>Pós-Graduação em Química UFSCar</h3>
-					</a>
-				</div>
-				<div class="sponsor-grid">
-					<a href="https://www.central.dq.ufscar.br/" target="_blank" class="sponsor-card">
-						<div class="sponsor-logo">
-							<img src="./src/img/central-logo.png" alt="Central Analítica UFSCar">
-						</div>
-						<h3>Central Analítica</h3>
-					</a>
-					<a href="" target="_blank" class="sponsor-card">
-						<div class="sponsor-logo">
-							<img src="./src/img/sq-logo.png" alt="SC Química">
-						</div>
-						<h3>SC Química</h3>
-					</a>
-					<a href="https://scqonline.com/" target="_blank" class="sponsor-card">
-						<div class="sponsor-logo">
-							<img src="./src/img/importnow-logo.gif" alt="ImportNow">
-						</div>
-						<h3>ImportNow</h3>
-					</a>
-				</div>
-			</div>
-		</main>
-		<footer>
-			<p>Escola de Verão em Química | Departamento de Química - UFSCar</p>
-			<p>Rodovia Washington Luis, km 235 - São Carlos - SP - BR</p>
-			<p><a href="mailto:evq@ufscar.br">evq@ufscar.br</a></p>
-		</footer>
-	</body>
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/sponsorship.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo-evq">
+        <img src="./src/img/EVQ-logo.png" alt="EVQ 2026" class="logo-img" />
+      </div>
+      <div class="logo-instituicao">
+        <img src="./src/img/DQ-logo.png" alt="DQ" class="logo-img" />
+        <img src="./src/img/Ufscar-logo.png" alt="UFSCar" class="logo-img" />
+      </div>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./historia.html">História</a></li>
+        <li><a href="./programacao.html">Programação</a></li>
+        <li><a href="./minicursos.html">Minicursos</a></li>
+        <li><a href="./inscricoes.html">Inscrições</a></li>
+        <li><a href="./patrocinadores.html">Patrocinadores</a></li>
+        <li><a href="./contato.html">Contato</a></li>
+      </ul>
+    </nav>
+    <main>
+      <div class="content">
+        <h2>Patrocinadores</h2>
+        <div class="sponsor-grid">
+          <a
+            href="https://www.dq.ufscar.br/pt-br/pagina-inicial"
+            target="_blank"
+            class="sponsor-card"
+          >
+            <div class="sponsor-logo">
+              <img
+                src="./src/img/DQ-logo.png"
+                alt="Departamento de Química UFSCar"
+              />
+            </div>
+            <h3>Departamento de Química UFSCar</h3>
+          </a>
+          <a
+            href="https://www.ppgq.ufscar.br/pt-br/front-page"
+            target="_blank"
+            class="sponsor-card"
+          >
+            <div class="sponsor-logo">
+              <img
+                src="./src/img/ppgq-logo.png"
+                alt="Pós-Graduação em Química UFSCar"
+              />
+            </div>
+            <h3>Pós-Graduação em Química UFSCar</h3>
+          </a>
+        </div>
+        <div class="sponsor-grid">
+          <a
+            href="https://www.central.dq.ufscar.br/"
+            target="_blank"
+            class="sponsor-card"
+          >
+            <div class="sponsor-logo">
+              <img
+                src="./src/img/central-logo.png"
+                alt="Central Analítica UFSCar"
+              />
+            </div>
+            <h3>Central Analítica</h3>
+          </a>
+          <a href="" target="_blank" class="sponsor-card">
+            <div class="sponsor-logo">
+              <img src="./src/img/sq-logo.png" alt="SC Química" />
+            </div>
+            <h3>SC Química</h3>
+          </a>
+          <a href="https://scqonline.com/" target="_blank" class="sponsor-card">
+            <div class="sponsor-logo">
+              <img src="./src/img/importnow-logo.gif" alt="ImportNow" />
+            </div>
+            <h3>ImportNow</h3>
+          </a>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <p>Escola de Verão em Química | Departamento de Química - UFSCar</p>
+      <p>Rodovia Washington Luis, km 235 - São Carlos - SP - BR</p>
+      <p><a href="mailto:evq@ufscar.br">evq@ufscar.br</a></p>
+    </footer>
+  </body>
 </html>
