--- a/index.html
+++ b/index.html
@@ -1,84 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>EVQ 2026</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EVQ 2026</title>
 
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="./src/img/apple-touch-icon.png" />
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="./src/img/favicon-32x32.png" />
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="./src/img/favicon-16x16.png" />
-		<link rel="manifest" href="./site.webmanifest" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./src/img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./src/img/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
 
-		<link rel="stylesheet" href="./src/css/reset.css" />
-		<link rel="stylesheet" href="./src/css/style.css" />
-	</head>
-	<body>
-		<header>
-			<div class="logo-evq">
-				<img src="./src/img/EVQ-logo.png" alt="EVQ 2026" class="logo-img" />
-			</div>
-			<div class="logo-instituicao">
-				<img src="./src/img/DQ-logo.png" alt="DQ" class="logo-img" />
-				<img src="./src/img/Ufscar-logo.png" alt="UFSCar" class="logo-img" />
-			</div>
-		</header>
-		<nav>
-			<ul>
-				<li><a href="./index.html">Home</a></li>
-				<li><a href="./historico.html">Histórico</a></li>
-				<li><a href="./programacao.html">Programação</a></li>
-				<li><a href="./minicursos.html">Minicursos</a></li>
-				<li><a href="./inscricoes.html">Inscrições</a></li>
-				<li><a href="./patrocinadores.html">Patrocinadores</a></li>
-				<li><a href="./contato.html">Contato</a></li>
-			</ul>
-		</nav>
-		<main>
-			<div class="content">
-				<h1>Bem-vindo à 46ª Escola de Verão em Química 2026</h1>
-				<p>
-					A Escola de Verão em Química (EVQ) é um evento anual promovido pelo
-					<a href="https://www.dq.ufscar.br/pt-br/pagina-inicial"
-						>Departamento de Química</a
-					>
-					da
-					<a href="https://www.ufscar.br/"
-						>Universidade Federal de São Carlos</a
-					>
-					(UFSCar). Destinada a estudantes de graduação, pós-graduação e
-					profissionais da área, a EVQ oferece uma oportunidade única para
-					aprimorar conhecimentos, trocar experiências e ampliar redes de
-					contato.
-				</p>
-				<p>
-					Em <strong>2026</strong>, entre os dias <strong>23 e 27 de Fevereiro</strong>, a EVQ contará com uma programação diversificada, incluindo
-					palestras, minicursos, workshops e atividades culturais. Nosso
-					objetivo é proporcionar um ambiente estimulante para o aprendizado e a
-					inovação na área de química.
-				</p>
-				<p>
-					Fique atento às nossas atualizações para mais informações sobre
-					inscrições, programação detalhada e palestrantes convidados. Esperamos
-					vê-lo na EVQ 2026!
-				</p>
-			</div>
-		</main>
-		<footer>
-			<p>Escola de Verão em Química | Departamento de Química - UFSCar</p>
-			<p>Rodovia Washington Luis, km 235 - São Carlos - SP - BR</p>
-			<p><a href="mailto:evq@ufscar.br">evq@ufscar.br</a></p>
-		</footer>
-	</body>
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo-evq">
+        <img src="./src/img/EVQ-logo.png" alt="EVQ 2026" class="logo-img" />
+      </div>
+      <div class="logo-instituicao">
+        <img src="./src/img/DQ-logo.png" alt="DQ" class="logo-img" />
+        <img src="./src/img/Ufscar-logo.png" alt="UFSCar" class="logo-img" />
+      </div>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./historia.html">História</a></li>
+        <li><a href="./programacao.html">Programação</a></li>
+        <li><a href="./minicursos.html">Minicursos</a></li>
+        <li><a href="./inscricoes.html">Inscrições</a></li>
+        <li><a href="./patrocinadores.html">Patrocinadores</a></li>
+        <li><a href="./contato.html">Contato</a></li>
+      </ul>
+    </nav>
+    <main>
+      <div class="content">
+        <h1>Bem-vindo à 46ª Escola de Verão em Química 2026</h1>
+        <p>
+          A Escola de Verão em Química (EVQ) é um evento anual promovido pelo
+          <a href="https://www.dq.ufscar.br/pt-br/pagina-inicial"
+            >Departamento de Química</a
+          >
+          da
+          <a href="https://www.ufscar.br/"
+            >Universidade Federal de São Carlos</a
+          >
+          (UFSCar). Destinada a estudantes de graduação, pós-graduação e
+          profissionais da área, a EVQ oferece uma oportunidade única para
+          aprimorar conhecimentos, trocar experiências e ampliar redes de
+          contato.
+        </p>
+        <p>
+          Em <strong>2026</strong>, entre os dias
+          <strong>23 e 27 de Fevereiro</strong>, a EVQ contará com uma
+          programação diversificada, incluindo palestras, minicursos, workshops
+          e atividades culturais. Nosso objetivo é proporcionar um ambiente
+          estimulante para o aprendizado e a inovação na área de química.
+        </p>
+        <p>
+          Fique atento às nossas atualizações para mais informações sobre
+          inscrições, programação detalhada e palestrantes convidados. Esperamos
+          vê-lo na EVQ 2026!
+        </p>
+      </div>
+    </main>
+    <footer>
+      <p>Escola de Verão em Química | Departamento de Química - UFSCar</p>
+      <p>Rodovia Washington Luis, km 235 - São Carlos - SP - BR</p>
+      <p><a href="mailto:evq@ufscar.br">evq@ufscar.br</a></p>
+    </footer>
+  </body>
 </html>
