--- a/programacao.html
+++ b/programacao.html
@@ -1,147 +1,174 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>EVQ 2026</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EVQ 2026</title>
 
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="./src/img/apple-touch-icon.png" />
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="./src/img/favicon-32x32.png" />
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="./src/img/favicon-16x16.png" />
-		<link rel="manifest" href="./site.webmanifest" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./src/img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./src/img/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
 
-		<link rel="stylesheet" href="./src/css/reset.css" />
-		<link rel="stylesheet" href="./src/css/style.css" />
-        <link rel="stylesheet" href="./src/css/program.css" />
-	</head>
-	<body>
-		<header>
-			<div class="logo-evq">
-				<img src="./src/img/EVQ-logo.png" alt="EVQ 2026" class="logo-img" />
-			</div>
-			<div class="logo-instituicao">
-				<img src="./src/img/DQ-logo.png" alt="DQ" class="logo-img" />
-				<img src="./src/img/Ufscar-logo.png" alt="UFSCar" class="logo-img" />
-			</div>
-		</header>
-		<nav>
-			<ul>
-				<li><a href="./index.html">Home</a></li>
-				<li><a href="./historico.html">Histórico</a></li>
-				<li><a href="./programacao.html">Programação</a></li>
-				<li><a href="./minicursos.html">Minicursos</a></li>
-				<li><a href="./inscricoes.html">Inscrições</a></li>
-				<li><a href="./patrocinadores.html">Patrocinadores</a></li>
-				<li><a href="./contato.html">Contato</a></li>
-			</ul>
-		</nav>
-		<main>
-			<div class="content">
-				<h2>Programação</h2>
-                <div class="program-table">
-                    <table>
-                        <tr>
-                            <th class="stick-column">Horário</th>
-                            <th>Segunda</th>
-                            <th>Terça</th>  
-                            <th>Quarta</th>
-                            <th>Quinta</th>
-                            <th>Sexta</th>
-                        </tr>
-                        <tr>
-                            <td class="stick-column">9:00</td>
-                            <td>Abertura</td>
-                            <td rowspan="3">Minicurso 1 <br><br> Minicurso 2</td>
-                            <td rowspan="3">Minicurso 1 <br><br> Minicurso 2</td>
-                            <td rowspan="3">Minicurso 1 <br><br> Minicurso 2</td>
-                            <td rowspan="3">Mesa-redonda 1 <br><br> Mesa-redonda 2</td>
-                        </tr>
-                        <tr>
-                            <td class="stick-column">10:00</td>
-                            <td rowspan="2">Workshop 1</td>
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                        </tr>
-                        <tr>
-                            <td class="stick-column">11:00</td>
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                        </tr>
-                        <tr>
-                            <td class="stick-column">12:00</td>
-                            <td colspan="5"><i>Intervalo para almoço</i></td>
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                        </tr>
-                        <tr>
-                            <td class="stick-column">14:00</td>
-                            <td rowspan="4">Workshop 2</td>
-                            <td rowspan="4">Minicurso 3 <br><br> Minicurso 4</td>
-                            <td rowspan="4">Minicurso 3 <br><br> Minicurso 4</td>
-                            <td rowspan="4">Minicurso 3 <br><br> Minicurso 4</td>
-                            <td rowspan="3">Workshop 3</td>
-                        </tr>
-                        <tr>
-                            <td class="stick-column">15:00</td>
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                        </tr>
-                        <tr>
-                            <td class="stick-column">16:00</td>
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                        </tr>
-                        <tr>
-                            <td class="stick-column">17:00</td>
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <!-- mesclada -->
-                            <td>Encerramento</td>
-                        </tr>
-                        <tr>
-                            <td class="stick-column">18:00</td>
-                            <td>Confraternização</td>
-                            <td>Sessão de Pôsteres <br>
-                                & Pitches de Pesquisa</td>
-                            <td>Confraternização</td>
-                            <td>Sessão de Pôsteres <br>
-                                & Pitches de Pesquisa</td>
-                            <td></td>
-                        </tr>
-                    </table>
-                </div>
-
-			</div>
-		</main>
-		<footer>
-			<p>Escola de Verão em Química | Departamento de Química - UFSCar</p>
-			<p>Rodovia Washington Luis, km 235 - São Carlos - SP - BR</p>
-			<p><a href="mailto:evq@ufscar.br">evq@ufscar.br</a></p>
-		</footer>
-	</body>
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/program.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo-evq">
+        <img src="./src/img/EVQ-logo.png" alt="EVQ 2026" class="logo-img" />
+      </div>
+      <div class="logo-instituicao">
+        <img src="./src/img/DQ-logo.png" alt="DQ" class="logo-img" />
+        <img src="./src/img/Ufscar-logo.png" alt="UFSCar" class="logo-img" />
+      </div>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./historia.html">História</a></li>
+        <li><a href="./programacao.html">Programação</a></li>
+        <li><a href="./minicursos.html">Minicursos</a></li>
+        <li><a href="./inscricoes.html">Inscrições</a></li>
+        <li><a href="./patrocinadores.html">Patrocinadores</a></li>
+        <li><a href="./contato.html">Contato</a></li>
+      </ul>
+    </nav>
+    <main>
+      <div class="content">
+        <h2>Programação</h2>
+        <div class="program-table">
+          <table>
+            <tr>
+              <th class="stick-column">Horário</th>
+              <th>Segunda</th>
+              <th>Terça</th>
+              <th>Quarta</th>
+              <th>Quinta</th>
+              <th>Sexta</th>
+            </tr>
+            <tr>
+              <td class="stick-column">9:00</td>
+              <td>Abertura</td>
+              <td rowspan="3">
+                Minicurso 1 <br /><br />
+                Minicurso 2
+              </td>
+              <td rowspan="3">
+                Minicurso 1 <br /><br />
+                Minicurso 2
+              </td>
+              <td rowspan="3">
+                Minicurso 1 <br /><br />
+                Minicurso 2
+              </td>
+              <td rowspan="3">
+                Mesa-redonda 1 <br /><br />
+                Mesa-redonda 2
+              </td>
+            </tr>
+            <tr>
+              <td class="stick-column">10:00</td>
+              <td rowspan="2">Workshop 1</td>
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+            </tr>
+            <tr>
+              <td class="stick-column">11:00</td>
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+            </tr>
+            <tr>
+              <td class="stick-column">12:00</td>
+              <td colspan="5"><i>Intervalo para almoço</i></td>
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+            </tr>
+            <tr>
+              <td class="stick-column">14:00</td>
+              <td rowspan="4">Workshop 2</td>
+              <td rowspan="4">
+                Minicurso 3 <br /><br />
+                Minicurso 4
+              </td>
+              <td rowspan="4">
+                Minicurso 3 <br /><br />
+                Minicurso 4
+              </td>
+              <td rowspan="4">
+                Minicurso 3 <br /><br />
+                Minicurso 4
+              </td>
+              <td rowspan="3">Workshop 3</td>
+            </tr>
+            <tr>
+              <td class="stick-column">15:00</td>
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+            </tr>
+            <tr>
+              <td class="stick-column">16:00</td>
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+            </tr>
+            <tr>
+              <td class="stick-column">17:00</td>
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <!-- mesclada -->
+              <td>Encerramento</td>
+            </tr>
+            <tr>
+              <td class="stick-column">18:00</td>
+              <td>Confraternização</td>
+              <td>
+                Sessão de Pôsteres <br />
+                & Pitches de Pesquisa
+              </td>
+              <td>Confraternização</td>
+              <td>
+                Sessão de Pôsteres <br />
+                & Pitches de Pesquisa
+              </td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <p>Escola de Verão em Química | Departamento de Química - UFSCar</p>
+      <p>Rodovia Washington Luis, km 235 - São Carlos - SP - BR</p>
+      <p><a href="mailto:evq@ufscar.br">evq@ufscar.br</a></p>
+    </footer>
+  </body>
 </html>
