chore: página de minicursos

--- a/minicursos.html
+++ b/minicursos.html
@@ -26,6 +26,7 @@
 
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/courses.css" />
   </head>
   <body>
     <header>
@@ -51,7 +52,142 @@
     <main>
       <div class="content">
         <h2>Minicursos</h2>
-        <p><i>Em breve!</i></p>
+        <div class="talker-card">
+          <div class="basic-info">
+            <div class="talker-photo">
+              <img
+                src="./src/img/fotos/Annemieke Madder.jpg"
+                alt="Annemieke Madder"
+              />
+            </div>
+            <div class="talker-text">
+              <h3 class="title">
+                <strong>MC1:</strong> Singlet Oxygen as a Tool for Biomolecular
+                Ligations
+              </h3>
+              <p class="name">Profa. Dra. Annemieke Madder</p>
+              <p class="institution">Ghent University, Bélgica</p>
+            </div>
+          </div>
+          <details class="moreinfo">
+            <summary>Resumo (inglês)</summary>
+            <p class="abstract">
+              Within OBCR, we have developed a highly selective and efficient
+              singlet oxygen mediated crosslink technology which is applicable
+              to peptide-protein, peptide-nucleic acid and nucleic acid
+              interstrand crosslink scenarios. For this purpose, a furan
+              ‘warhead’ is introduced into one of the biomolecular partners and
+              subsequently activated by means of an oxidation trigger such as
+              singlet oxygen which induces generation of a nucleophile sensitive
+              keto-enal moiety. The overall procedure allows for spatiotemporal
+              control of the crosslinking event. In the context of peptide
+              ligand-receptor interactions, we have described, in live cells
+              under normal growth conditions, spontaneous enzymatic activation
+              and crosslinking of furan-modified peptide ligands to their
+              membrane GPCR with zero toxicity, high efficiency and
+              spatio-specificity. Furan introduction into peptide and protein
+              ligands and subsequent covalent modification of their natural
+              targets was achieved after triggering photocatalytic singlet
+              oxygen generation. Furan-modified oligonucleotide probes were
+              designed for efficient and selective crosslinking to natural
+              nucleic acid targets, including the elusive G-quadruplex and
+              I-motif targets. Singlet oxygen mediated furan oxidation was
+              further applied to aptamer stapling. Introduction of a slightly
+              modified furan moiety into peptides and peptide nucleic acids
+              (PNAs) allowed development of a triggerless proximity-induced
+              click ligation with applications in nucleic acid biomarker
+              detection and protein array design as well as peptide cyclisation.
+              Furan moieties were further converted, using singlet oxygen, into
+              versatile building blocks for site-selective modification of
+              proteins and synthesis of bioconjugates. The talk will highlight
+              selected specific examples of these cross-linking and conjugation
+              methodologies.
+            </p>
+          </details>
+        </div>
+        <div class="talker-card">
+          <div class="basic-info">
+            <div class="talker-photo">
+              <img
+                src="./src/img/fotos/Jens Oluf Jensen.jpg"
+                alt="Jens Oluf Jensen"
+              />
+            </div>
+            <div class="talker-text">
+              <h3 class="title">
+                <strong>MC3:</strong> Development of membranes and electrodes
+                for alkaline electrolysis at DTU Energy
+              </h3>
+              <p class="name">Prof. Dr. Jens Oluf Jensen</p>
+              <p class="institution">
+                Technical University of Denmark, Dinamarca
+              </p>
+            </div>
+          </div>
+          <details class="moreinfo">
+            <summary>Resumo (inglês)</summary>
+            <p class="abstract">
+              The course addresses one of the central technological challenges
+              in renewable energy conversion: the development of efficient,
+              durable, and scalable components for alkaline water electrolysis.
+              With growing global demand for green hydrogen, advances in
+              membrane and electrode materials are essential to improve both
+              performance and cost-effectiveness, enabling large-scale
+              deployment of electrolysis technologies. The program introduces
+              participants to state-of-the-art testing and diagnostic protocols
+              (polarization curves, electrochemical impedance spectroscopy,
+              durability assessments, and degradation mechanism analysis),
+              providing a rigorous framework to evaluate and compare
+              electrolysis components. Drawing from DTU Energy case studies, the
+              course bridges fundamental materials research with practical
+              implementation, covering systems from bench scale to prototype
+              development.
+            </p>
+          </details>
+        </div>
+        <div class="talker-card">
+          <div class="basic-info">
+            <div class="talker-photo">
+              <img
+                src="./src/img/fotos/Eugénie Romero-Laboureur.jpg"
+                alt="Eugénie Romero-Laboureur"
+              />
+            </div>
+            <div class="talker-text">
+              <h3 class="title">
+                <strong>MC4:</strong> High-Throughput Experimentation as an
+                enabling technology for Organic Synthesis
+              </h3>
+              <p class="name">Dra. Eugénie Romero-Laboureur</p>
+              <p class="institution">CEA Paris-Saclay, França</p>
+            </div>
+          </div>
+          <details class="moreinfo">
+            <summary>Resumo (inglês)</summary>
+            <p class="abstract">
+              High-throughput experimentation (HTE) is increasingly recognized
+              as a key methodology in contemporary organic synthesis. By
+              allowing the systematic evaluation of hundreds of reactions in
+              parallel, HTE moves beyond traditional trial-and-error approaches
+              and provides a comprehensive and unbiased view of reactivity. This
+              capability not only accelerates the discovery of new
+              transformations but also enables a deeper understanding of
+              catalytic mechanisms and the factors that govern selectivity. The
+              impact of HTE extends across a wide range of applications: from
+              the rapid screening of catalysts, ligands, and reaction
+              conditions, to the exploration of large and diverse chemical
+              spaces that would be impractical using conventional methods. Its
+              integration into both academic and industrial research programs
+              has proven essential for advancing sustainable synthesis, drug
+              discovery, materials development, and fine chemicals production.
+              By coupling automation with rigorous data analysis, HTE makes
+              experimental campaigns more systematic, reproducible, and
+              predictive. As such, it is reshaping the way chemists design and
+              optimize synthetic routes, bridging fundamental research and
+              practical application on a scale that was previously unattainable.
+            </p>
+          </details>
+        </div>
       </div>
     </main>
     <footer>
