feat: banner de avisos na página de minicursos

--- a/minicursos.html
+++ b/minicursos.html
@@ -52,6 +52,14 @@
     <main>
       <div class="content">
         <h2>Minicursos</h2>
+
+        <div class="alerta-container">
+          <div class="alerta-texto">
+            AGUARDE MAIS INFORMAÇÕES SOBRE O MINICURSO 2... &nbsp;&nbsp;&nbsp;
+          </div>
+        </div>
+        <br />
+
         <div class="talker-card">
           <div class="basic-info">
             <div class="talker-photo">
