feat: atualização do cronograma

--- a/programacao.html
+++ b/programacao.html
@@ -78,13 +78,13 @@
                 Minicurso 2
               </td>
               <td rowspan="3">
-                Mesa-redonda 1 <br /><br />
-                Mesa-redonda 2
+                <a href="#mesa1">Mesa-redonda 1</a> <br /><br />
+                <a href="#mesa2">Mesa-redonda 2</a>
               </td>
             </tr>
             <tr>
               <td class="stick-column">10:00</td>
-              <td rowspan="2">Workshop 1</td>
+              <td rowspan="2"><a href="#workshop1">Workshop 1</a></td>
               <!-- mesclada -->
               <!-- mesclada -->
               <!-- mesclada -->
@@ -108,7 +108,7 @@
             </tr>
             <tr>
               <td class="stick-column">14:00</td>
-              <td rowspan="4">Workshop 2</td>
+              <td rowspan="4"><a href="#workshop2">Workshop 2</a></td>
               <td rowspan="4">
                 Minicurso 3 <br /><br />
                 Minicurso 4
@@ -121,7 +121,7 @@
                 Minicurso 3 <br /><br />
                 Minicurso 4
               </td>
-              <td rowspan="3">Workshop 3</td>
+              <td rowspan="3"><a href="#workshop3">Workshop 3</a></td>
             </tr>
             <tr>
               <td class="stick-column">15:00</td>
@@ -162,6 +162,81 @@
               <td></td>
             </tr>
           </table>
+        </div>
+        <br />
+        <div class="more-info">
+          <h2>Workshops</h2>
+          <div class="info-card">
+            <h3 id="workshop1">
+              <strong>Workshop 1: </strong> A Química em Três Dimensões –
+              Conexões entre Ciência, Internacionalização, Formação e
+              Transformação Tecnológica
+            </h3>
+            <p>
+              Uma oportunidade única de explorar a química sob diferentes
+              perspectivas, integrando inovação, formação de talentos e impacto
+              global. O workshop contará com a participação de três palestrantes
+              do Departamento de Química da UFSCar, que trarão reflexões
+              inspiradoras sobre o futuro da ciência e sua transformação
+              tecnológica.
+            </p>
+          </div>
+          <div class="info-card">
+            <h3 id="workshop2">
+              <strong>Workshop 2: </strong> Conexões entre Inteligência
+              Artificial, Energia Renovável e Transformação Molecular
+            </h3>
+            <p>
+              O workshop reunirá quatro renomados palestrantes internacionais,
+              que compartilharão perspectivas inovadoras sobre o futuro da
+              ciência e o papel da tecnologia na transformação do conhecimento
+              em impacto real.
+            </p>
+          </div>
+          <div class="info-card">
+            <h3 id="workshop3">
+              <strong>Workshop 3: </strong> Caminhos da Inovação – Química,
+              Conhecimento e Oportunidades (Embrapii, FAPESP PIPE,
+              Investidores-Anjo + Empresas)
+            </h3>
+            <p>
+              Este Workshop apresentará como a química pode gerar conhecimento
+              aplicado e novas oportunidades de negócio. Serão discutidos
+              mecanismos de fomento, como Embrapii e FAPESP PIPE, e o papel dos
+              investidores-anjo no apoio a startups. O encontro aproximará
+              ciência, mercado e empreendedorismo. Uma oportunidade para
+              transformar ideias em impacto real.
+            </p>
+          </div>
+        </div>
+        <div class="more-info">
+          <h2>Mesas-rendondas</h2>
+          <div class="info-card">
+            <h3 id="mesa1">
+              <strong>Mesa 1: </strong> Trajetórias em Expansão: Onde a Química
+              Pode te Levar - Subtítulo: Múltiplas rotas profissionais na
+              Química
+            </h3>
+            <p>
+              Convidado do CRQ-SP + Pesquisadores. Esta mesa-redonda mostrará a
+              diversidade de caminhos que a Química oferece. Com a participação
+              de representantes do CRQ-SP e de pesquisadores atuantes, serão
+              discutidas múltiplas rotas profissionais, desde a indústria até a
+              pesquisa acadêmica, revelando possibilidades para diferentes
+              perfis de carreira.
+            </p>
+          </div>
+          <div class="info-card">
+            <h3 id="mesa2">
+              <strong>Mesa 2: </strong> Trajetórias que Inspiram: Egressos do DQ
+              e PPGQ UFSCar
+            </h3>
+            <p>
+              A mesa busca inspirar novas gerações, destacando como a formação
+              em Química na UFSCar contribuiu para conquistas acadêmicas,
+              profissionais e pessoais.
+            </p>
+          </div>
         </div>
       </div>
     </main>
